# ProjectorPI

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  __main__.py  extron.py  projector.py  pyproject.toml  requirements.txt  serialdevice.py
src/projectorpi/: __init__.py  cli.py  extron.py  projector.py  serialdevice.py
