[tool.poetry]
name = "ProjectorPi"
version = "0.1.1"
description = ""
authors = ["Marijn Doeve <marijn@doeve.me>"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
projectorpi = "projectorpi.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "^3.5"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "^0.961"
pre-commit = "^2.19.0"
twine = "^4.0.1"
types-setuptools = "^57.4.18"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
